High frequency android svg/as-image/canvas-drawImage-scale-1c.html == svg/as-image/lime100x100-ref.html | canvas-drawImage-scale-2-ref.html | single tracking bug
Categories
(Core :: Graphics, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr102 | --- | unaffected |
firefox113 | --- | unaffected |
firefox114 | --- | unaffected |
firefox115 | --- | wontfix |
firefox116 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: sotaro)
References
(Regression)
Details
(Keywords: intermittent-failure, intermittent-testcase, regression, Whiteboard: [stockwell needswork:owner])
Attachments
(1 file)
Filed by: smolnar [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=415189350&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/bk_yNEbCSfeqqZuCcPTQYg/runs/0/artifacts/public/logs/live_backing.log
Reftest URL: https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/tools/reftest/reftest-analyzer.xhtml#logurl=https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/bk_yNEbCSfeqqZuCcPTQYg/runs/0/artifacts/public/logs/live_backing.log&only_show_unexpected=1
INFO - REFTEST TEST-LOAD | http://10.0.2.2:8854/tests/layout/reftests/svg/as-image/canvas-drawImage-scale-1c.html | 711 / 2201 (32%)
[task 2023-05-10T09:30:44.834Z] 09:30:44 WARNING - REFTEST TEST-UNEXPECTED-FAIL | layout/reftests/svg/as-image/canvas-drawImage-scale-1c.html == layout/reftests/svg/as-image/lime100x100-ref.html | crash-check | This test left crash dumps behind, but we weren't expecting it to!
[task 2023-05-10T09:30:44.834Z] 09:30:44 INFO - REFTEST INFO | Found unexpected crash dump file /data/local/tmp/test_root/reftest/profile/minidumps/37ec2e3f-6d79-2932-6c8c-723d16283c54.dmp
[task 2023-05-10T09:30:44.834Z] 09:30:44 INFO - REFTEST INFO | Found unexpected crash dump file /data/local/tmp/test_root/reftest/profile/minidumps/37ec2e3f-6d79-2932-6c8c-723d16283c54.extra
[task 2023-05-10T09:30:44.835Z] 09:30:44 WARNING - REFTEST TEST-UNEXPECTED-FAIL | layout/reftests/svg/as-image/canvas-drawImage-scale-1c.html == layout/reftests/svg/as-image/lime100x100-ref.html | image comparison, max difference: 255, number of differing pixels: 10000
[task 2023-05-10T09:30:44.849Z] 09:30:44 INFO - REFTEST IMAGE 1 (TEST): data:image/png;base64
Comment 1•7 months ago
|
||
@Sotaro, can you take a look at these failures?
seem to be coming from bug 1831811
Comment 2•7 months ago
|
||
Set release status flags based on info from the regressing bug 1831811
Assignee | ||
Updated•7 months ago
|
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment 5•7 months ago
•
|
||
There have been 55 total failures in the last 7 days.
All the failures are on android-em-7-0-x86_64-qr platform, debug build type.
Recent failure log.
Updated•7 months ago
|
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment 12•6 months ago
|
||
Update
There have been 39 failures within the last 7 days:
- 35 failures on Android 7.0 x86-64 WebRender debug
- 4 failures on Android 13.0 Pixel5 AArch64 debug
Recent failure log: https://treeherder.mozilla.org/logviewer?job_id=417959936&repo=autoland&lineNumber=5660
Sotaro, are you still working on this?
Comment 13•6 months ago
|
||
Adjusting component to match the regressor bug 1831811 (presumably the fix will be in that area of code).
Comment hidden (Intermittent Failures Robot) |
Assignee | ||
Comment 15•6 months ago
|
||
I look into the bug this week.
Assignee | ||
Updated•6 months ago
|
Assignee | ||
Comment 16•6 months ago
|
||
The test failures seemed to happen by the following assertion failure. Though it is not clear yet why it happened.
Assignee | ||
Comment 17•6 months ago
•
|
||
(In reply to Sotaro Ikeda [:sotaro] from comment #16)
The test failures seemed to happen by the following assertion failure. Though it is not clear yet why it happened.
It happened at RemoteTextureMap::GetExternalImageIdOfRemoteTexture() by updating owner->mLatestRenderedTextureHost.
It is not good to release compositable ref of TextureHost in RenderThread.
Assignee | ||
Comment 18•6 months ago
|
||
Comment 19•6 months ago
|
||
Pushed by sikeda.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a231d627ff10 Do not release compositable ref of remote texture TextureHost in RenderThread r=lsalzman,gfx-reviewers
Comment 20•6 months ago
|
||
bugherder |
Comment 21•6 months ago
|
||
The patch landed in nightly and beta is affected.
:sotaro, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox115
towontfix
.
For more information, please visit BugBot documentation.
Assignee | ||
Comment 22•6 months ago
|
||
It seems not important enough to require an uplift.
Assignee | ||
Updated•6 months ago
|
Comment hidden (Intermittent Failures Robot) |
Description
•