Bug 1832271 - Do not release compositable ref of remote texture TextureHost in RenderThread r=lsalzman,gfx-reviewers

We do not want to  release compositable ref of TextureHost in RenderThread.

Differential Revision: https://phabricator.services.mozilla.com/D180170