gfx/layers/RemoteTextureMap.h
@@ -235,6 +235,9 @@ class RemoteTextureMap {
     RemoteTextureId mLatestTextureId = {0};
     CompositableTextureHostRef mLatestTextureHost;
     CompositableTextureHostRef mLatestRenderedTextureHost;
+    // Holds compositable refs to TextureHosts of RenderTextureHosts that are
+    // waiting to be released in non-RenderThread.
+    std::deque<CompositableTextureHostRef> mReleasingRenderedTextureHosts;
     std::stack<UniquePtr<TextureData>> mRecycledTextures;
     std::queue<std::shared_ptr<gl::SharedSurface>> mRecycledSharedSurfaces;
   };
